<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp" >

    <!-- Why can't I define textSize and textStyle
    	 in the timer container and have it inherited
    	 by the TextViews? -->
    <RelativeLayout
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" >
	    <TextView
	        android:id="@+id/minutes"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:text="@string/minutes"
	        android:textSize="80sp"
	        android:textStyle="bold" />

	    <TextView
	        android:id="@+id/colon"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_toRightOf="@id/minutes"
	        android:text="@string/colon"
	        android:textSize="80sp"
	        android:textStyle="bold" />

	    <TextView
	        android:id="@+id/seconds"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_toRightOf="@id/colon"
	        android:text="@string/seconds"
	        android:textSize="80sp"
	        android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timer"
        android:layout_centerHorizontal="true">

	    <Button
	        android:id="@+id/startStop"
	     	android:layout_height="wrap_content"
	     	android:layout_width="wrap_content"
	     	android:text="@string/startStop"
	     	android:onClick="onStartStop" />

	    <Button
	        android:id="@+id/resetLap"
	     	android:layout_height="wrap_content"
	     	android:layout_width="wrap_content"
	     	android:layout_toRightOf="@id/startStop"
	     	android:text="@string/resetLap"
	     	android:onClick="onLapReset" />
    </RelativeLayout>

</RelativeLayout>
